<resources>
    <string name="app_name">Calculator</string>
    <string name="number_convertor">Number Convertor</string>
    <string name="enter_number">enter number</string>
    <string name="result">result</string>
    <string name="binary">Bin</string>
    <string name="oct">Oct</string>
    <string name="hexa_decimal">Hex</string>
    <string name="decimal">Dec</string>
    <string name="convert">Convert</string>
    <string name="to">To</string>
    <string name="from">From</string>
</resources>